--- a/ImpactMap/Views/Categories/Create.cshtml
+++ b/ImpactMap/Views/Categories/Create.cshtml
@@ -10,6 +10,7 @@
         <h2>@ViewBag.Title</h2>
 
         <div class="subNav">
+            <a href=@Url.Action("Create", "Categories")><i class="fa fa-plus-circle" aria-hidden="true" title="Create New Tag"></i></a>
             <a href=@Url.Action("Index", "Categories")><i class="fa fa-list-alt" aria-hidden="true" title="Tags List"></i></a>
             <a href=@Url.Action("Index", "Dashboard")><i class="fa fa-tachometer" aria-hidden="true" title="Return to Dashboard"></i></a>
         </div>
