--- a/ImpactMap/Views/Categories/Details.cshtml
+++ b/ImpactMap/Views/Categories/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ImpactMap.Models.Category
 
 @{
-    ViewBag.Title = "Category Details";
+    ViewBag.Title = "Tag Details";
 }
 <div class="container">
     <div class="pageInfo">
