--- a/ImpactMap/Views/Entities/Edit.cshtml
+++ b/ImpactMap/Views/Entities/Edit.cshtml
@@ -45,7 +45,7 @@
                 <div class="form-group">
 
                     <input type="submit" value="Save" class="button" />
-                    @Html.ActionLink("Return to Dashboard", "Index", "Dashboard", new { @class = "button btn-default" })
+                    @Html.ActionLink("Return to Dashboard", "Index", "Dashboard", null, new { @class = "button btn-default" })
 
                 </div>
 
@@ -100,8 +100,4 @@
     }
 
 
-
-    <div class="addpadding">
-
-    </div>
 </div>
