--- a/ImpactMap/Views/Investments/Delete.cshtml
+++ b/ImpactMap/Views/Investments/Delete.cshtml
@@ -94,7 +94,7 @@
 
             
                 <input type="submit" value="Delete" class="button" />
-                @Html.ActionLink("Return to Dashboard", "Index", "Dashboard", new { @class = "btn btn-default button buttonAlert" })
+                @Html.ActionLink("Return to Dashboard", "Index", "Dashboard", null, new { @class = "btn btn-default button buttonAlert" })
          
 
            
