--- a/ImpactMap/Views/Categories/Delete.cshtml
+++ b/ImpactMap/Views/Categories/Delete.cshtml
@@ -52,7 +52,7 @@
 
             <div class="addpadding">
                 <input type="submit" value="Delete" class="button" />
-                @Html.ActionLink("Return to Dashboard", "Index", "Dashboard", new { @class = "btn btn-default button buttonAlert" })
+                @Html.ActionLink("Return to Dashboard", "Index", "Dashboard", null, new { @class = "btn btn-default button buttonAlert" })
             </div>
 
             
