--- a/ImpactMap/Views/Categories/Edit.cshtml
+++ b/ImpactMap/Views/Categories/Edit.cshtml
@@ -26,16 +26,13 @@
         @Html.HiddenFor(model => model.ID)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label" })
                 @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
-            </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.metrics, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            @*@Html.LabelFor(model => model.metrics, htmlAttributes: new { @class = "control-label" })*@
                 <div id="displayMetrics">
                     @{ if (Model.metrics.Count > 0)
                         {
@@ -47,7 +44,9 @@
                     }
 
                 </div>
-                <label>Enter Metric</label>
+
+            <div class="form-group">
+                <label class="control-label">Enter Metric</label>
                 <input type="text" id="metrics" /> <i class="fa fa-plus-circle" aria-hidden="true" id="addMetric"></i><br>
                 <input name="newMetrics" id="newMetrics" type="hidden" />
             </div>
