--- a/ImpactMap/Views/Categories/Index.cshtml
+++ b/ImpactMap/Views/Categories/Index.cshtml
@@ -10,10 +10,13 @@
         <h2>@ViewBag.Title</h2>
 
         <div class="subNav">
+            <a href=@Url.Action("Create", "Categories")><i class="fa fa-plus-circle" aria-hidden="true" title="Create New Tag"></i></a>
             <a href=@Url.Action("Index", "Categories")><i class="fa fa-list-alt" aria-hidden="true" title="Tags List"></i></a>
             <a href=@Url.Action("Index", "Dashboard")><i class="fa fa-tachometer" aria-hidden="true" title="Return to Dashboard"></i></a>
         </div>
     </div>
+
+    <hr />
 
     <table class="table">
         <tr>
@@ -22,6 +25,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.metrics)
+
+            </th>
+            <th>
 
             </th>
         </tr>
