--- a/ImpactMap/Views/Investments/Index.cshtml
+++ b/ImpactMap/Views/Investments/Index.cshtml
@@ -94,7 +94,7 @@
                         @if (item.projectTo.report != null)
                         {
                             //string reportID = Convert.ToString(item.projectTo.report.ID);
-                            @Html.ActionLink("Report", "Details", "Reports", new { id = item.projectTo.report.ID }, null)
+                            @Html.ActionLink("View Report", "Details", "Reports", new { id = item.projectTo.report.ID }, null)
                         }
                         else
                         {
@@ -104,7 +104,7 @@
                     <td>
                         @Html.ActionLink("Details", "Details", new { id = item.ID }) |
                         @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                        @Html.ActionLink("Delete", "Edit", new { id = item.ID })
+                        @Html.ActionLink("Delete", "Delete", new { id = item.ID })
                     </td>
                 </tr>
             }
