--- a/ImpactMap/Views/Projects/Index.cshtml
+++ b/ImpactMap/Views/Projects/Index.cshtml
@@ -9,7 +9,7 @@
         <h2>@ViewBag.Title</h2>
 
         <div class="subNav">
-
+            <a href=@Url.Action("Create", "Projects")><i class="fa fa-plus-circle" aria-hidden="true" title="Create New Project"></i></a>
             <a href=@Url.Action("Index", "Projects")><i class="fa fa-list-alt" aria-hidden="true" title="Projects List"></i></a>
             <a href=@Url.Action("Index", "Dashboard")><i class="fa fa-tachometer" aria-hidden="true" title="Return to Dashboard"></i></a>
 
