--- a/ImpactMap/Views/Reports/Index.cshtml
+++ b/ImpactMap/Views/Reports/Index.cshtml
@@ -6,9 +6,15 @@
 
 <div class="container">
 
-    <div class="subNav">
-        <a href=@Url.Action("Index", "Dashboard")><i class="fa fa-tachometer" aria-hidden="true" title="Return to Dashboard"></i></a>
+    <div class="pageInfo">
+        <h2>@ViewBag.Title</h2>
+
+        <div class="subNav">
+            <a href=@Url.Action("Index", "Dashboard")><i class="fa fa-tachometer" aria-hidden="true" title="Return to Dashboard"></i></a>
+        </div>
     </div>
+
+    <hr/>
 
 
     <table class="table">
