--- a/ImpactMap/Views/Investments/Edit.cshtml
+++ b/ImpactMap/Views/Investments/Edit.cshtml
@@ -131,9 +131,10 @@
                             </div>
                             <input name="categories" id="categories" type="hidden" />
 
+
                         </div>
 
-
+                        <input name="ID" type="hidden" value="@Model.Investment.ID" />
 
 
                         <div class="form-group">
