--- a/ImpactMap/Views/Investments/Edit.cshtml
+++ b/ImpactMap/Views/Investments/Edit.cshtml
@@ -38,7 +38,7 @@
                             <div>
                                 @Html.LabelFor(model => model.Investment.amount, htmlAttributes: new { @class = "control-label", @title = @ViewBag.Tooltips["amount"] })
                                 <span class="fa fa-question-circle tts" data-toggle="tooltip" data-placement="right" title="@ViewBag.Tooltips["amount"]"></span>
-                                @Html.EditorFor(model => model.Investment.amount, new { htmlAttributes = new { @type = "number", @min = "0.01", @step = "0.01", @class = "form-control", @title = @ViewBag.Tooltips["amount"] } })
+                                @Html.EditorFor(model => model.Investment.amount, new { htmlAttributes = new { @type = "text", @class = "form-control", @title = @ViewBag.Tooltips["amount"] } })
                                 @Html.ValidationMessageFor(model => model.Investment.amount, "", new { @class = "text-danger" })
 
                             </div>
@@ -155,6 +155,7 @@
 
    @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jqueryMask")
 
     <script>
 
@@ -260,12 +261,17 @@
         function initialize() {
             load_categories();
             updateProjectsOut();
+            addCurrencyMask();
         }
 
         $(initialize);
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
         })
+
+        function addCurrencyMask() {
+            $('#Investment_amount').mask('000,000,000,000.00', { reverse: true });
+        }
     </script>
 }
 
