--- a/ImpactMap/Views/Shared/_Layout.cshtml
+++ b/ImpactMap/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                     <h1>ImpactMap</h1>
                 </div>
 
-                <div id="headerNotifs" class="navbar-collapse collapse">
+                <div id="headerNotifs">
                     <ul id="headerUl">
 
                     </ul>
